[package]
name = "windows-args"
version = "0.1.0"
authors = [
    "Michael Howell <michael@notriddle.com>",
    "Michael Lamparski <diagonaldevice@gmail.com>",
]
edition = "2018"
description = "std::env::args for arbitrary strings on Windows"
repository = "https://github.com/ExpHP/windows-args"
keywords = ["windows", "cli", "parsing"]
categories = ["parser-implementations", "configuration"]
license = "MIT/Apache-2.0"
readme = "README.md"

[badges]
appveyor = { repository = "ExpHP/windows-args", branch = "master", service = "github" }

[dependencies]

[features]

# Allows compiling the crate on platforms other than Windows.
#
# It will not be possible to use the crate at runtime.
_debug_compile_test = []
