[package]
name = "windows-args"
version = "0.1.0"
authors = [
    "Michael Howell <michael@notriddle.com>",
    "Michael Lamparski <diagonaldevice@gmail.com>",
]
edition = "2018"
description = "std::env::args for arbitrary strings on Windows"
repository = "https://github.com/ExpHP/windows-args"
keywords = ["windows", "cli", "parsing"]
categories = ["parser-implementations", "configuration"]
license = "MIT/Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[badges]
appveyor = { repository = "ExpHP/windows-args", branch = "master", service = "github" }

[dependencies]
wtf8 = "0.0.3"

[dev-dependencies]
version-sync = "0.8.1"

